# PeaCoq

./: .flowconfig  .gitignore  .travis.yml  INSTALL.md  LICENSE  README.md  clean.sh  config.hs  coq-serapi.nix  cse505.sh  default.nix  deploy.sh  mkconfig.sh  nix-setup-snap.sh  nix-setup.sh  peacoq.cabal  peacoq.nix  rooster.cabal  setup-frontend.sh  setup-peacoq-plugin.sh  setup-peacoq-server.sh  setup-peacoqtop.sh  setup-snap.sh  setup.sh  shell-build.nix  shell-run.nix  shell.nix  stack.yaml  start-peacoq.sh  stop-peacoq.sh  travis-setup.sh
.github/: dependabot.yml
ab-study/: log2csv.py  plot.py
analysis/: log2csv.py  plot.py
coq-serapi/: default.nix
docker/: Dockerfile  dock.sh
peacoq-server/: default.nix  peacoq-server.cabal  peacoq-server.nix  shell.nix
peacoq-server/exec/: Main.hs
peacoq-server/lib/: Handlers.hs  PeaCoq.hs  PeaCoqHandler.hs  Server.hs  Session.hs  Utils.hs
peacoq-server/lib/Handlers/: About.hs  Annotate.hs  EditAt.hs  GetOptions.hs  Goal.hs  Hints.hs  Quit.hs  Search.hs  SetOptions.hs
peacoqtop/: default.nix  peacoqtop.cabal  peacoqtop.nix
peacoqtop/lib/: Coq.hs  CoqIO.hs  Coqtop.hs  ToXML.hs  XMLProtocol.hs
peacoqtop/lib/Coq/: FeedbackContent.hs  Goals.hs  Status.hs
peacoqtop/plugin/: .gitignore  Makefile  PeaCoq.v  _CoqProject  peacoq_plugin.ml4  peacoq_utils.ml
peacoqtop/test/: Main.hs
plugin/: .gitignore  PeaCoq.v  peacoq_plugin.ml4  peacoq_utils.ml
scripts/: before-install-coq-serapi.sh  before-install-coq.sh  before-install-linux.sh  before-install-osx.sh  clone-snap.sh  frontend-setup.sh  setup-configuration.sh  setup-coq-serapi.sh  setup-coq.sh  setup-frontend.sh  setup-peacoq-plugin.sh  setup-peacoq-server.sh  setup-peacoqtop.sh  setup-snap.sh  shared-variables.sh
src/: .gitignore  Config.hs  Console.hs  Coq.hs  CoqIO.hs  CoqParse.hs  CoqTypes.hs  Coqtop.hs  FromString.hs  FromXML.hs  Handlers.hs  Lexer.x  Main.hs  OCaml.hs  Parser.y  PeaCoq.hs  Rooster.hs  Session.hs  Test.hs  TestParser.hs  ToXML.hs  Utils.hs  XMLParsers.hs  XMLProtocol.hs  feedback.py
src/Coq/: EditId.hs  Loc.hs  Message.hs  MessageLevel.hs  OptionState.hs  OptionValue.hs  SearchConstraint.hs  StateId.hs  Value.hs
src/Coq/Intf/: ConstrExpr.hs  DeclKinds.hs  GlobTerm.hs  Locus.hs  MiscTypes.hs  TacExpr.hs  VernacExpr.hs
src/Coq/Kernel/: Evar.hs  Names.hs
src/Coq/Lib/: Canary.hs  GenArg.hs  Loc.hs  PP.hs  Predicate.hs
src/Coq/STM/: TeXmacsPP.hs
src/exec/: Main.hs
src/lib/: Conduits.hs  CoqIO.hs  Handlers.hs  ParseXML.hs  PeaCoqHandler.hs  Server.hs  Session.hs  ShowXML.hs  Utils.hs
src/lib/Coq/: CoqInfo.hs  CoqObject.hs  Evar.hs  Feedback.hs  FeedbackContent.hs  Goal.hs  StateId.hs  Value.hs
src/lib/Handlers/: Add.hs  Evars.hs  Init.hs  Interp.hs  MkCases.hs  PrintAST.hs  Query.hs  Status.hs  StopWorker.hs
src/test/: Test.hs
ucsd/: groupeacoq.sh
ucsd/analysis/: log2csv.py  plot.py
uw-cse-505/: .gitignore  01-coq-intro.v  E01_CoqIntro.v  Lecture_01_Coq_Intro.v  Makefile  README.md  coqdoc-505.css  courses.txt  deploy.sh  index.html  lec-01.v  mkmaterials.sh  post-process.py  start-peacoq.sh  style.css  update.sh
uw-cse-505/distrib/linux/: .gitignore  setup.sh
uw-cse-505/e01/: .gitignore  Makefile  test01.c  test02.c  test03.c
uw-cse-505/e02/: E02_HelloPeaCoq.v
uw-cse-505/e03/: E03_InLecture.v  E03_Lists.v  E03_Notes.v  E03_Syntax.v  E03_foo.v  E03_wtf.v
uw-cse-505/e04/: E04_OperationalSemantics.v
uw-cse-505/e05/: E05_InClas.v  E05_OpSemProofs.v
uw-cse-505/e06/: E06_InClass.v  E06_Interp.v
uw-cse-505/e07/: E07_InClass.v  E07_Interp.v
uw-cse-505/e08/: E08_notes.txt
uw-cse-505/e10/: E10_LambdaCalculus.v
uw-cse-505/e11/: E11_BigStep.v  E11_LambdaCalculus.v  E11_Progress.v
uw-cse-505/e12/: E12_STLC.v
uw-cse-505/e13/: E13_STLC.v  E13_STLC_Extended.v
uw-cse-505/e14/: E14_STCL_Extended.v
uw-cse-505/e16/: cont.sml
uw-cse-505/e17/: E17_Continuations.v  links.txt
uw-cse-505/e18/: links.txt
uw-cse-505/hw01/: hw01.v
uw-cse-505/hw02/: hw02.v
uw-cse-505/hw03/: hw03.v
web/: .gitignore  Makefile  SVGPan.js  bower.json  codemirror.css  codemirror.js  coq-utils.js  coq.js  coq85.css  coq85.html  coq85.js  coq85.ts  coqtop.js  coqtop85.js  coqtop85.ts  d3tree.css  d3tree.html  d3tree.js  diffproto.html  diffproto.js  diffs-b.css  diffs-b.html  diffs-b.js  diffs.css  diffs.data  diffs.html  diffs.js  documentation.js  first-steps.js  first-steps.v  gallina.js  index.css  index.html  jquery-ui.css  jquery-ui.js  lecture-flow.html  lecture-toolbar.js  lecture.css  lecture.html  lecture.js  (+26 more)
web/coq/: RTLgenproof-SerAPI-compatible.v  bogus_printing.v  concat.v  concat_empty.v  coqide.v  darylbug.v  gregory.v  ibl-induction.v  ibl.v  output.v  parsing-bug.v  pretty.v  regression-hypothesis-display.v  small-study.v  solved.v  study-empty.v  study.v  test-001.v  test-002.v  test-003.v  theorem.v  unicode.v
web/coq/lectures/: first-steps.v
web/coq/tests/: an-easy-test.v  band.v  bigtheorem.v  billdiscrepancy.v  bug-when-stepping.v  bullethell.v  bullets.v  cons_app_precedence.v  debug-html.v  diffSample.v  diffs.v  errorLocation.v  existentials.v  hw2-alex-bug.v  list.v  metanode.v  notree.v  pair.v  precendence.v  problematic.v  proved.v  regression-parsing-comments.v  regression.v  rewrite.v  slow.v  smalltheorem.v  spaces-around-braces.v  test-save.v  theorem.v  three-cases.v  warning.v
web/cpdt/: roosterize.js
web/interfaces/: ace.d.ts  codemirror.js  d3.js  lodash.js  types.js
web/jquery-ui-1.10.4.custom/: index.html
web/js/: .gitignore  mathjax-test.js  peacoq.js
web/js/peacoq-js/: highlight-coq.js
web/sf/: peacoqize.js  roosterize.js
web/src/: coqtop.js  editor.js  fakenode.js  globals.js  goal.js  goalnode.js  lecture.js  peacoqresponse.js  prooftree.js  prooftreenode.js  tacticgroupnode.js  tacticnode.js  utils.js
web/ts/: d3-bundle.d.ts  goal.ts  goals.ts  index.ts  pattern.ts  sertop.ts  setup.ts  strictly.ts  tic-tac-toe.tsx  tsconfig.json  typings-bin  typings.json  ui-container.ts  visualization-interactions.ts  visualization-printers.ts
web/uw505/: README  courses.txt
(+401 files in other folders)
