Name:                PeaCoq
Version:             0.1
Synopsis:            PeaCoq is a web front-end to Coq
Description:         PeaCoq is still a web front-end to Coq
License:             MIT
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Executable peacoq

  default-language: Haskell2010

  hs-source-dirs: src

  Main-is: Main.hs

  Build-tools:

  Build-depends:
                adjunctions               >= 4.2   && < 4.4,
                aeson                     >= 0.8   && < 0.12,
                array                     >= 0.5   && < 0.6,
                base                      >= 4.8   && < 4.9,
                bytestring                >= 0.10  && < 0.11,
                conduit                   >= 1.2   && < 1.3,
                conduit-extra             >= 1.1   && < 1.2,
                containers                >= 0.5   && < 0.6,
                data-default              >= 0.5   && < 0.6,
                directory                 >= 1.2   && < 1.3,
                exceptions                >= 0.6   && < 0.9,
                filemanip                 >= 0.3   && < 0.4,
                hslogger                  >= 1.2   && < 1.3,
                lens                      >= 4.11  && < 4.14,
                MissingH                  >= 1.3   && < 1.4,
                monad-loops               >= 0.4   && < 0.5,
                mtl                       >= 2.2   && < 2.3,
                network                   >= 2.6   && < 2.7,
                process                   >= 1.2   && < 1.3,
                random                    >= 1.0   && < 1.2,
                snap                      >= 0.14  && < 0.15,
                snap-core                 >= 0.9   && < 0.10,
                snap-server               >= 0.9   && < 0.10,
                tagsoup                   >= 0.13  && < 0.14,
                text                      >= 1.2   && < 1.3,
                time                      >= 1.5   && < 1.6,
                transformers              >= 0.4   && < 0.5,
                unordered-containers      >= 0.2   && < 0.3,
                utf8-string               >= 0.3   && < 1.1,
                xml-conduit               >= 1.3   && < 1.4,
                xml-types                 >= 0.3   && < 0.4

  Other-modules:

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
