Name:                peacoq-server
Version:             0.1
Synopsis:            Server to bridge a web interface to coqtop
Description:         Server to bridge a web interface to coqtop
License:             MIT
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Library
  default-language: Haskell2010
  extra-libraries:  z
  ghc-options:      -Wall
  hs-source-dirs:   lib
  build-depends:
    adjunctions               >= 4.2   && < 4.4,
    aeson                     >= 0.8   && < 0.12,
    base                      >= 4.8   && < 4.10,
    bytestring                >= 0.10  && < 0.11,
    containers                >= 0.5   && < 0.6,
    directory                 >= 1.2   && < 1.3,
    hslogger                  >= 1.2   && < 1.3,
    lens                      >= 4.11  && < 4.15,
    MissingH                  >= 1.3   && < 1.4,
    monad-loops               >= 0.4   && < 0.5,
    mtl                       >= 2.2   && < 2.3,
    network                   >= 2.6   && < 2.7,
    process                   >= 1.2   && < 1.5,
    random                    >= 1.0   && < 1.2,
    snap                      >= 1.0   && < 1.1,
    snap-core                 >= 1.0   && < 1.1,
    snap-server               >= 1.0   && < 1.1,
    text                      >= 1.2   && < 1.3,
    time                      >= 1.5   && < 1.7,
    transformers              >= 0.4   && < 0.6,
    unordered-containers      >= 0.2   && < 0.3,
    utf8-string               >= 0.3   && < 1.1
  exposed-modules:
    PeaCoqHandler,
    Server
  other-modules:
    PeaCoq,
    Session,
    Snap.Extras.JSON

Executable peacoq-server
  default-language: Haskell2010
  extra-libraries:  z
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base, peacoq-server

Test-Suite peacoq-server-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    base                      >= 4.8   && < 4.10,
    -- HUnit                     >= 1.3   && < 1.4,
    -- monad-loops               >= 0.4   && < 0.5,
    -- mtl                       >= 2.2   && < 2.3,
    -- process                   >= 1.2   && < 1.3,
    peacoq-server
