Name:                peacoqtop
Version:             0.1
Synopsis:            Wrapper around coqtop using by PeaCoq
Description:         Wrapper around coqtop using by PeaCoq
License:             MIT
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Library
  default-language: Haskell2010
  extra-libraries:  z
  ghc-options:      -Wall
  hs-source-dirs:   lib
  build-depends:
    aeson                     >= 0.8   && < 0.12,
    base                      >= 4.8   && < 4.9,
    bytestring                >= 0.10  && < 0.11,
    conduit                   >= 1.2   && < 1.3,
    conduit-extra             >= 1.1   && < 1.2,
    containers                >= 0.5   && < 0.6,
    exceptions                >= 0.6   && < 0.9,
    monad-loops               >= 0.4   && < 0.5,
    mtl                       >= 2.2   && < 2.3,
    process                   >= 1.2   && < 1.3,
    tagsoup                   >= 0.13  && < 0.14,
    text                      >= 1.2   && < 1.3,
    transformers              >= 0.4   && < 0.5,
    xml-conduit               >= 1.3   && < 1.4,
    xml-types                 >= 0.3   && < 0.4
  exposed-modules:
    Coq,
    CoqIO,
    Coqtop,
    XMLProtocol
  other-modules:
    Conduits,
    CoqParse,
    Coq.CoqInfo,
    Coq.CoqObject,
    Coq.EditId,
    Coq.Evar,
    Coq.FeedbackContent,
    Coq.Feedback,
    Coq.Goal,
    Coq.Goals,
    Coq.Loc,
    Coq.Message,
    Coq.MessageLevel,
    Coq.OptionState,
    Coq.OptionValue,
    Coq.SearchConstraint,
    Coq.StateId,
    Coq.Status,
    Coq.Value,
    FromString,
    FromXML,
    -- ParseXML,
    -- ShowXML,
    ToXML,
    Utils

Executable peacoqtop
  default-language: Haskell2010
  extra-libraries:  z
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base, peacoqtop

Test-Suite peacoqtop-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   test
  ghc-options:      -Wall
  main-is:          Main.hs
  build-depends:
    peacoqtop,
    base                      >= 4.8   && < 4.9,
    HUnit                     >= 1.3   && < 1.4,
    monad-loops               >= 0.4   && < 0.5,
    mtl                       >= 2.2   && < 2.3,
    process                   >= 1.2   && < 1.3
